kubernetes/apps/jellyfin/middleware-add-prefix.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: add-jellyfin-prefix
  namespace: jellyfin
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Prefix: "/jellyfin"
