kubernetes/apps/jellyfin/middleware-jellyfin.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-jellyfin
  namespace: jellyfin
spec:
  stripPrefix:
    prefixes:
      - /jellyfin
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: https-proto
  namespace: jellyfin
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: "https"
