kubernetes/apps/jellyfin/middleware-redirect-root.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-jellyfin-root
  namespace: jellyfin
spec:
  redirectRegex:
    regex: ^/$
    replacement: /jellyfin/
    permanent: false
