kubernetes/apps/jellyfin/ingressroute-lan.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin-lan
  namespace: jellyfin
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`192.168.0.100`) && PathPrefix(`/jellyfin`)
      kind: Rule
      services:
        - name: jellyfin
          port: 8096
    - match: Host(`192.168.0.100`) && PathPrefix(`/web`)
      kind: Rule
      services:
        - name: jellyfin
          port: 8096
