kubernetes/apps/jellyfin/ingressroute-port.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin
  namespace: jellyfin
spec:
  entryPoints:
    - web-jellyfin
  routes:
    - match: PathPrefix(`/`)
      kind: Rule
      services:
        - name: jellyfin
          port: 8096
