kubernetes/apps/jellyfin/ingressroute-tunnel.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin-tunnel
  namespace: jellyfin
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`jellyfin.lucasrocha.dpdns.org`) && PathPrefix(`/jellyfin`)
      kind: Rule
      services:
        - name: jellyfin
          port: 8096
      middlewares:
        - name: strip-jellyfin
          namespace: jellyfin
        - name: add-jellyfin-prefix
          namespace: jellyfin
    - match: Host(`jellyfin.lucasrocha.dpdns.org`)
      kind: Rule
      services:
        - name: jellyfin
          port: 8096
      middlewares:
        - name: redirect-jellyfin-root
          namespace: jellyfin
