kubernetes/apps/jellyfin/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-jellyfin
  namespace: jellyfin
spec:
  stripPrefix:
    prefixes:
      - /jellyfin
    forceSlash: false
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin
  namespace: jellyfin
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/jellyfin`)
      kind: Rule
      services:
        - name: jellyfin
          port: 8096
      middlewares:
        - name: strip-jellyfin
          namespace: jellyfin
